--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 
         <div class="container-fluid carousel-item">
-          <div class="row">
+          <div class="row second-row">
             <div class="col-lg-6 col-11 img">
             <img class="testemonial-img" src="images\image-john.jpg" alt="John Tarkpor pic">
             </div>
